errors resolved